# symcascade

./: .gitignore  README.md  pyproject.toml
.uploads/: e5633f37-02c3-4d03-aa92-62580bca3baf_2026-06-27-symcascade-design.md
docs/superpowers/plans/: 2026-06-27-symcascade-implementation.md
docs/superpowers/specs/: 2026-06-27-symcascade-design.md
experiments/configs/: alfworld_full.yaml
symcascade/: __init__.py  config.py
symcascade/bench/: alfworld_adapter.py  alfworld_domain.py  harness.py  run.py
symcascade/cache/: __init__.py  semantic_cache.py  skeleton_cache.py
symcascade/core/: orchestrator.py  stage.py  types.py
symcascade/discriminator/: __init__.py  conformal.py  features.py  online_learner.py  online_router.py  roi_estimator.py  router.py
symcascade/neural/: __init__.py  cloud_stage.py  confidence_gate.py  embedder.py  gemma_backend.py  vllm_client.py
symcascade/symbolic/: __init__.py  fd_solver.py  matcher.py  pddl_gen.py  pddl_llm.py  replanner.py  skeleton.py
tests/: test_e2e_cascade.py
tests/bench/: test_harness.py
tests/cache/: test_semantic_cache.py  test_skeleton_cache.py
tests/core/: test_orchestrator.py  test_types.py
tests/discriminator/: test_conformal.py  test_features.py  test_online_learner.py  test_online_router.py  test_roi_estimator.py  test_router.py
tests/neural/: test_cloud_stage.py  test_confidence_gate.py  test_embedder.py  test_gemma_backend.py  test_vllm_client.py
tests/symbolic/: test_fd_solver.py  test_matcher.py  test_pddl_gen.py  test_pddl_llm.py  test_replanner.py  test_skeleton.py
